manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulador-do-caos
spec:
  selector:
    matchLabels:
      app: simulador-do-caos
  template:
    metadata:
      labels:
        app: simulador-do-caos
    spec:
      containers:
      - name: simulador-do-caos
        image: alexnnascimento/simulador-do-caos:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
