manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulador-do-caos
spec:
  selector:
    app: simulador-do-caos
  ports:
  - port: 80
    targetPort: 3000
    name: http
    protocol: TCP
  type: NodePort
